abstracted common trial parameters; fixed the selection of multiple objects with same prefix when an exact match is found - for example if /a/b/1 needs to be retrieved but both /a/b/1 and /a/b/10 are present it used to retrieve both - so I fixed this to only retrieve 1