@@ -1,13 +1,20 @@
 package org.janelia.jacsstorage.service.impl.contenthandling;
 
 import java.io.OutputStream;
+import java.security.MessageDigest;
+import java.text.Format;
+import java.util.Base64;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import jakarta.enterprise.inject.Vetoed;
 
+import com.google.common.base.Splitter;
 import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
 import org.apache.commons.compress.archivers.tar.TarArchiveOutputStream;
 import org.apache.commons.compress.archivers.tar.TarConstants;
+import org.apache.commons.lang3.StringUtils;
+import org.janelia.jacsstorage.coreutils.IOStreamUtils;
 import org.janelia.jacsstorage.service.ContentAccessParams;
 import org.janelia.jacsstorage.service.ContentException;
 import org.janelia.jacsstorage.service.ContentNode;
@@ -59,7 +66,7 @@ public class DirectContentAccess implements ContentAccess {
         } else if (alwaysArchive || contentNodes.size() > 1) {
             return archiveContent(contentNodes, contentObjectReader, outputStream);
         } else { // contentNodes.size() == 1
-            if (contentNodes.get(0).isCollection()) {
+            if (contentNodes.getFirst().isCollection()) {
                 return 0;
             }
             return contentObjectReader.streamContentToOutput(contentNodes.get(0).getObjectKey(), outputStream);
@@ -70,14 +77,15 @@ public class DirectContentAccess implements ContentAccess {
         TarArchiveOutputStream archiveOutputStream = new TarArchiveOutputStream(outputStream, TarConstants.DEFAULT_RCDSIZE);
         try {
             String commonPrefix = ContentNodeHelper.commonPrefix(contentNodes);
+            LOG.info("Archiving {} content nodes; common prefix: {}", contentNodes.size(), commonPrefix);
             for (ContentNode contentNode : contentNodes) {
                 String entryPrefix = commonPrefix.isEmpty() ? contentNode.getPrefix() : commonPrefix;
-                String entryName = entryPrefix.isEmpty() ? contentNode.getName() : entryPrefix + "/" + contentNode.getName();
+                String entryName = adjustEntryName(entryPrefix.isEmpty() ? contentNode.getName() : entryPrefix + "/" + contentNode.getName());
                 TarArchiveEntry entry = new TarArchiveEntry(entryName);
                 entry.setSize(contentNode.getSize());
                 archiveOutputStream.putArchiveEntry(entry);
                 if (contentNode.isNotCollection()) {
-                    contentObjectReader.streamContentToOutput(contentNode.getObjectKey(), outputStream);
+                    IOStreamUtils.copyFrom(contentObjectReader.getContentInputStream(contentNode.getObjectKey()), archiveOutputStream);
                 }
                 archiveOutputStream.closeArchiveEntry();
             }
@@ -88,6 +96,19 @@ public class DirectContentAccess implements ContentAccess {
         } catch (Exception e) {
             throw new ContentException(e);
         }
+    }
+
+    private String adjustEntryName(String entryName) {
+        return Splitter.on('/').splitToList(entryName).stream()
+                .map(s -> {
+                    if (s.length() > 20) {
+                        int sHash = s.hashCode();
+                        return Integer.toString(Math.abs(sHash), 36);
+                    } else {
+                        return s;
+                    }
+                })
+                .collect(Collectors.joining("/"));
     }
 
     private long estimateArchiveSize(List<ContentNode> contentNodes) {
